# hal

./: .clang-tidy  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  conanfile.txt
.gitlab/ci/: build-linux.yml  build-tests-linux.yml  coverage-linux.yml  quality.yml  run-tests-linux.yml  test-linux.yml  valgrind-linux.yml
cmake/: conan.cmake  coverage.cmake
lib/: CMakeLists.txt  Hardware.cpp
lib/board/: CMakeLists.txt
lib/board/sbc/raspberrypi/: BoardInit.cpp  CMakeLists.txt
lib/board/test/gpio-set2/: BoardLinux.cpp
lib/board/test/middleware/: CMakeLists.txt
lib/board/test/platform-gpio/: CMakeLists.txt
lib/board/test/platform-gpio/config/test/platform-gpio/: config.hpp
lib/board/test/platform-gpio/include/test/platform-gpio/: DeviceId.hpp
lib/board/test/q39tester-set1/: CMakeLists.txt
lib/board/test/q39tester-set1/config/test/q39tester-set1/: config.hpp
lib/board/test/q39tester-set1/include/test/q39tester-set1/: DeviceId.hpp
lib/board/test/uart-set1/: BoardInit.cpp  CMakeLists.txt
lib/drivers/eeprom/generic/: CMakeLists.txt  GenericEeprom.cpp
lib/drivers/gpio/mcp23x17/: CMakeLists.txt
lib/drivers/rtc/m41t82/: CMakeLists.txt
lib/drivers/sensor/sht3xdis/: CMakeLists.txt  Sht3xDisHumidity.cpp  Sht3xDisHumidity.hpp  Sht3xDisSensor.cpp  Sht3xDisSensor.hpp  Sht3xDisTemperature.cpp  Sht3xDisTemperature.hpp
lib/logger/include/hal/logger/: hal.hpp
lib/platform/linux/gpio/: CMakeLists.txt
lib/platform/linux/uart/: LinuxUart.cpp
lib/platform/test/lib/test/: CMakeLists.txt
lib/platform/test/test/: TestDevice.hpp
lib/private/include/hal/: Board.hpp
lib/private/include/hal/gpio/: PinInput.hpp  PortInput.hpp  PortOutput.hpp
lib/product/: CMakeLists.txt
lib/public/: IRtc.cpp
lib/public/include/hal/: Hardware.hpp  ScopedDevice.hpp
lib/public/include/hal/gpio/: IPinInput.hpp  IPinOutput.hpp  IPortInput.hpp  IPortOutput.hpp  types.hpp
lib/utils/logger/include/hal/utils/: logger.hpp
test/gpio-set1/: SingleBits.cpp
test/gpio-set2/: GpioPorts.cpp
test/middleware/: Error.cpp  ScopedDevice.cpp  initialization.cpp
test/platform-gpio/: GpioPorts.cpp  SingleBits.cpp  conanfile.txt
test/platform-uart/: CMakeLists.txt  ClientTests.cpp  conanfile.txt
test/q39tester/eeprom-set1/: EepromTests.cpp
test/q39tester/gpio-set1/: 4PinPorts.cpp  MultithreadGpio.cpp  SingleBits.cpp
test/q39tester/rtc-set1/: RtcTests.cpp
test/q39tester/sensor-set1/: SensorTests.cpp
tools/: check-clang-tidy.sh  profile.in
